--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,12 @@
         <maven.compiler.target>1.11</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>4.5</version>
+        </dependency>
+    </dependencies>
+
 </project>
